--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://levi-manoel.github.io/levi-manoel",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -40,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "autoprefixer": "^9.8.8",
+    "gh-pages": "^3.2.3",
+    "postcss": "^7.0.39"
   }
 }
